Fix safari z-index issue

--- a/cigionline/static/themes/pfpc_series/css/_pfpc_series_article_series.scss
+++ b/cigionline/static/themes/pfpc_series/css/_pfpc_series_article_series.scss
@@ -44,7 +44,6 @@
         position: absolute;
         top: 0;
         width: 100%;
-        z-index: -1;
       }
     }
 
@@ -67,6 +66,10 @@
       color: $white;
       line-height: 1.25;
       text-align: left;
+    }
+
+    .container {
+      z-index: 1;
     }
 
     .opinion-series-label {
@@ -94,7 +97,6 @@
       position: absolute;
       top: 0;
       width: 100%;
-      z-index: -1;
 
       video {
         height: 50%;
